@@ -63,8 +63,6 @@ extern "C" {
 #define ecc_j_to_a nettle_ecc_j_to_a
 #define ecc_eh_to_a_itch nettle_ecc_eh_to_a_itch
 #define ecc_eh_to_a nettle_ecc_eh_to_a
-#define ecc_a_to_eh_itch nettle_ecc_a_to_eh_itch
-#define ecc_a_to_eh nettle_ecc_a_to_eh
 #define ecc_dup_jj_itch nettle_ecc_dup_jj_itch
 #define ecc_dup_jj nettle_ecc_dup_jj
 #define ecc_add_jja_itch nettle_ecc_add_jja_itch
@@ -207,13 +205,6 @@ ecc_eh_to_a_itch (const struct ecc_curve *ecc);
 void
 ecc_eh_to_a (const struct ecc_curve *ecc,
 	     int op,
-	     mp_limb_t *r, const mp_limb_t *p,
-	     mp_limb_t *scratch);
-
-mp_size_t
-ecc_a_to_eh_itch (const struct ecc_curve *ecc);
-void
-ecc_a_to_eh (const struct ecc_curve *ecc,
 	     mp_limb_t *r, const mp_limb_t *p,
 	     mp_limb_t *scratch);
 
